--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coffee House - Menu</title>
+  <meta property="og:image" content="/IMG-20251006-WA0009.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta name="twitter:image" content="/IMG-20251006-WA0009.jpg">
+<link rel="icon" href="/IMG-20251006-WA0009.jpg" type="image/png">
+
+  <title>The Good Stuff - Menu</title>
   <style>
     /* --- Loader Styles --- */
     .loader-wrapper {
@@ -187,7 +193,7 @@
     @keyframes slide { 0% { transform: translate(0, 0); } 100% { transform: translate(50px, 50px); } }
     .header-content { max-width: 800px; margin: 0 auto; position: relative; z-index: 1;}
     .logo-area { margin-bottom: 20px;}
-    .coffee-icon { width: 100px; height: 100px; margin: 0 auto 15px;}
+    .coffee-icon { width: 200px; height: 200px; margin: 0 auto 15px;}
     .header h1 { font-size: 3em; color: #f5e6d3; margin-bottom: 10px; letter-spacing: 2px; text-transform: uppercase; text-shadow: 3px 3px 0px rgba(0,0,0,0.2); transform: rotate(-2deg);}
     .header p { font-size: 1.2em; color: #f5e6d3; font-style: italic; opacity: 0.9;}
     .container { max-width: 1400px; margin: 0 auto; padding: 30px 20px;}
@@ -266,16 +272,9 @@
   <div class="header">
     <div class="header-content">
       <div class="logo-area">
-        <svg class="coffee-icon" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-          <path d="M 60 80 L 70 160 Q 70 170 100 170 Q 130 170 130 160 L 140 80 Z" fill="#f5e6d3" stroke="#2c1810" stroke-width="6" stroke-linejoin="round"/>
-          <path d="M 140 100 Q 165 100 165 130 Q 165 160 140 160" fill="none" stroke="#2c1810" stroke-width="6" stroke-linecap="round"/>
-          <ellipse cx="100" cy="85" rx="38" ry="8" fill="#8b6f47"/>
-          <path d="M 75 55 Q 70 35 75 20" fill="none" stroke="#f5e6d3" stroke-width="5" stroke-linecap="round"/>
-          <path d="M 100 50 Q 95 30 100 15" fill="none" stroke="#f5e6d3" stroke-width="5" stroke-linecap="round"/>
-          <path d="M 125 55 Q 120 35 125 20" fill="none" stroke="#f5e6d3" stroke-width="5" stroke-linecap="round"/>
-        </svg>
+      <img class="coffee-icon"  src="/IMG-20251006-WA0009-removebg-preview.png" alt="">
       </div>
-      <h1>Coffee House Menu</h1>
+      
       <p>Freshly Brewed • Lovingly Crafted</p>
     </div>
   </div>
@@ -446,7 +445,7 @@
   </div>
   <div class="footer">
     <div class="footer-content">
-      <p>Enjoy Every Sip & Every Bite at Coffee House!</p>
+      <p>Enjoy Every Sip & Every Bite at The Good Stuff!</p>
     </div>
   </div>
 
