--- a/index.html
+++ b/index.html
@@ -222,7 +222,44 @@
       .menu-grid { grid-template-columns: 1fr;}
       .section-title { font-size: 1.4em;}
     }
+.coffee-icon {
+  width: 200px;
+  height: 200px;
+  margin: 0 auto 15px;
+  filter: drop-shadow(0 0 15px rgba(0, 0, 0, 0.8)); 
+}
+ .insta-icon {
+  width: 40px;
+  height: 40px;
+  margin-top: -25px;
+  filter: invert(1) drop-shadow(0 0 5px rgba(0, 0, 0, 0.8));
+}
+ .contact-icon{
+   width: 25px;
 
+   margin-top: -15px;
+   margin-bottom: 8px;
+   margin-left: 30px;
+   filter: invert(1) drop-shadow(0 0 5px rgba(0, 0, 0, 0.8));
+ }
+.logo-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: -20px;
+  position: relative;
+}
+
+.veg-logo {
+  position: absolute;
+  bottom: -35px;
+  right: -15px;
+  width: 25px;
+  height: 25px;
+  fill: #ffffff; /* white color */
+ 
+
+}
 
   </style>
 </head>
@@ -272,14 +309,23 @@
   </div>
 
   <div class="header">
-    <div class="header-content">
-      <div class="logo-area">
-      <img class="coffee-icon"  src="/IMG-20251006-WA0009-removebg-preview.png" alt="">
-      </div>
-      
-      <p>Freshly Brewed • Lovingly Crafted</p>
+  <div class="header-content">
+    <div class="contact">
+      <img class="insta-icon" src="/insta.png" alt="">
+      <img class="contact-icon" src="/call.png" alt="">
     </div>
+
+    <div class="logo-area">
+      <img class="coffee-icon" src="/IMG-20251006-WA0009-removebg-preview.png" alt="">
+    </div>
+
+    <p>Freshly Brewed • Lovingly Crafted</p>
+
+    <!-- ✅ Veg mark -->
+    <img class="veg-logo" src="/veg.png" alt="Veg">
   </div>
+</div>
+
 
   <div class="container">
     <div class="menu-grid">
