--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
   filter: invert(1) drop-shadow(0 0 5px rgba(0, 0, 0, 0.8));
 }
  .contact-icon{
-   width: 25px;
+   width: 20px;
 
    margin-top: -15px;
    margin-bottom: 8px;
@@ -259,6 +259,11 @@
   fill: #ffffff; /* white color */
  
 
+}
+
+.contact{
+margin-top: -30px;
+  
 }
 
   </style>
@@ -310,9 +315,15 @@
 
   <div class="header">
   <div class="header-content">
-    <div class="contact">
-      <img class="insta-icon" src="/insta.png" alt="">
-      <img class="contact-icon" src="/call.png" alt="">
+    <div class="contact" style="display: flex; align-items: center; justify-content: center; gap: 15px; margin-bottom: 10px;">
+      <div style="display: flex; align-items: center; gap: 8px;">
+        <img class="insta-icon" src="/insta.png" alt="Instagram" style="margin-top: 0;">
+        <span style="color: #f5e6d3; font-size: 1em; font-weight: bold;">thegoodstuff.vesu</span>
+      </div>
+      <div style="display: flex; align-items: center; gap: 8px;">
+        <img class="contact-icon" src="/call.png" alt="Contact" style="margin-top: 0; margin-left: 0; margin-bottom: 0;">
+        <span style="color: #f5e6d3; font-size: 1em; font-weight: bold;">7874911747</span>
+      </div>
     </div>
 
     <div class="logo-area">
